--- a/source/locales/hu-HU.json
+++ b/source/locales/hu-HU.json
@@ -1,88 +1,5 @@
 {
-  "ArgumentError": {
-    "default": "A megadott érték érvénytelen.",
-    "enumType": "{0} nem felsorolás típus.",
-    "rule": "Egy Rule konstruktor háromféle paramétert fogad el: egy szöveget az üzenetnej, egy egész számot prioritásnak és egy logikai értéket mint a stopsProcessing paramétert.",
-
-    "defined": "A paramétert meg kell adnia.",
-    "required": "A paraméter kötelező.",
-    "string": "A paraméternek szövegnek kell lennie.",
-    "optString": "A paraméternek szövegnek vagy nullnak kell lennie.",
-    "manString": "A paraméternek nem-üres szövegnek kell lennie.",
-    "optNumber": "A paraméternek számnak vagy nullnak kell lennie.",
-    "manNumber": "A paraméternek számnak kell lennie.",
-    "optInteger": "A paraméternek egész számnak vagy nullnak kell lennie.",
-    "manInteger": "A paraméternek egész számnak kell lennie.",
-    "optBoolean": "A paraméternek logikai értéknek vagy nullnak kell lennie.",
-    "manBoolean": "A paraméternek logikai értéknek kell lennie.",
-    "optObject": "A paraméternek objektumnak vagy nullnak kell lennie.",
-    "manObject": "A paraméternek objektumnak kell lennie.",
-    "optFunction": "A paraméternek függvénynek vagy nullnak kell lennie.",
-    "manFunction": "A paraméternek függvénynek kell lennie.",
-    "optType": "A paraméternek {0} objektumnak vagy nullnak kell lennie.",
-    "manType": "A paraméternek {0} objektumnak kell lennie.",
-    "modelType": "A paraméternek {0} típusnak kell lennie.",
-    "enumMember": "A paraméternek egy {0} elemnek kell lennie.",
-    "optArray": "A paraméternek {0} objektumtömbnek, egy {0} objektumnak vagy nullnak kell lennie.",
-    "manArray": "A paraméternek {0} objektumtömbnek vagy egy {0} objektumnak kell lennie.",
-    "optArrayPrim": "A paraméternek {0} értékek tömbjének, egy {0} értéknek vagy nullnak kell lennie.",
-    "manArrayPrim": "A paraméternek {0} értékek tömbjének vagy egy {0} értéknek kell lennie.",
-
-    "c_defined": "A {0} konstruktor {1} paraméterét meg kell adnia.",
-    "c_required": "A {0} konstruktor {1} paramétere kötelező.",
-    "c_string": "A {0} konstruktor {1} paraméterének szövegnek kell lennie.",
-    "c_optString": "A {0} konstruktor {1} paraméterének szövegnek vagy nullnak kell lennie.",
-    "c_manString": "A {0} konstruktor {1} paraméterének nem-üres szövegnek kell lennie.",
-    "c_optNumber": "A {0} konstruktor {1} paraméterének számnak vagy nullnak kell lennie.",
-    "c_manNumber": "A {0} konstruktor {1} paraméterének számnak kell lennie.",
-    "c_optInteger": "A {0} konstruktor {1} paraméterének egész számnak vagy nullnak kell lennie.",
-    "c_manInteger": "A {0} konstruktor {1} paraméterének egész számnak kell lennie.",
-    "c_optBoolean": "A {0} konstruktor {1} paraméterének logikai értéknek vagy nullnak kell lennie.",
-    "c_manBoolean": "A {0} konstruktor {1} paraméterének logikai értéknek kell lennie.",
-    "c_optObject": "A {0} konstruktor {1} paraméterének objektumnak vagy nullnak kell lennie.",
-    "c_manObject": "A {0} konstruktor {1} paraméterének objektumnak kell lennie.",
-    "c_optFunction": "A {0} konstruktor {1} paraméterének függvénynek vagy nullnak kell lennie.",
-    "c_manFunction": "A {0} konstruktor {1} paraméterének függvénynek kell lennie.",
-    "c_optType": "A {0} konstruktor {1} paraméterének {2} objektumnak vagy nullnak kell lennie.",
-    "c_manType": "A {0} konstruktor {1} paraméterének {2} objektumnak kell lennie.",
-    "c_modelType": "A {0} konstruktor {1} paraméterének {2} típusnak kell lennie.",
-    "c_enumMember": "A {0} konstruktor {1} paraméterének egy {2} elemnek kell lennie.",
-    "c_optArray": "A {0} konstruktor {1} paraméterének {2} objektumtömbnek, egy {2} objektumnak vagy nullnak kell lennie.",
-    "c_manArray": "A {0} konstruktor {1} paraméterének {2} objektumtömbnek vagy egy {2} objektumnak kell lennie.",
-    "c_optArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének, egy {2} értéknek vagy nullnak kell lennie.",
-    "c_manArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének vay egy {2} értéknek kell lennie.",
-
-    "m_defined": "A {0}.{1} eljárás {2} paraméterét meg kell adnia.",
-    "m_required": "A {0}.{1} eljárás {2} paramétere kötelező.",
-    "m_string": "A {0}.{1} eljárás {2} paraméterének szövegnek kell lennie.",
-    "m_optString": "A {0}.{1} eljárás {2} paraméterének szövegnek vagy nullnak kell lennie.",
-    "m_manString": "A {0}.{1} eljárás {2} paraméterének nem-üres szövegnek kell lennie.",
-    "m_optNumber": "A {0}.{1} eljárás {2} paraméterének számnak vagy nullnak kell lennie.",
-    "m_manNumber": "A {0}.{1} eljárás {2} paraméterének számnak kell lennie.",
-    "m_optInteger": "A {0}.{1} eljárás {2} paraméterének egész számnak vagy nullnak kell lennie.",
-    "m_manInteger": "A {0}.{1} eljárás {2} paraméterének egész számnak kell lennie.",
-    "m_optBoolean": "A {0}.{1} eljárás {2} paraméterének logikai értéknek vagy nullnak kell lennie.",
-    "m_manBoolean": "A {0}.{1} eljárás {2} paraméterének logikai értéknek kell lennie.",
-    "m_optObject": "A {0}.{1} eljárás {2} paraméterének objektumnak vagy nullnak kell lennie.",
-    "m_manObject": "A {0}.{1} eljárás {2} paraméterének objektumnak kell lennie.",
-    "m_optFunction": "A {0}.{1} eljárás {2} paraméterének függvények vagy nullnak kell lennie.",
-    "m_manFunction": "A {0}.{1} eljárás {2} paraméterének függvénynek kell lennie.",
-    "m_optType": "A {0}.{1} eljárás {2} paraméterének {3} objektumnak vagy nullnak kell lennie.",
-    "m_manType": "A {0}.{1} eljárás {2} paraméterének {3} objektumnak kell lennie.",
-    "m_modelType": "A {0}.{1} eljárás {2} paraméterének {3} típusnak kell lennie.",
-    "m_enumMember": "A {0}.{1} eljárás {2} paraméterének egy {3} elemnek kell lennie.",
-    "m_optArray": "A {0}.{1} eljárás {2} paraméterének {3} objektumtömbnek, egy {3} objektumnak vagy nullnak kell lennie.",
-    "m_manArray": "A {0}.{1} eljárás {2} paraméterének {3} objektumtömbnek vagy egy {3} objektumnak kell lennie.",
-    "m_optArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének, egy {3} értéknek vagy nullnak kell lennie.",
-    "m_manArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének vagy egy {3} értéknek kell lennie.",
-
-    "c_pm": "Az első kivételével a PropertyManager konstruktor összes paraméterének PropertyInfo objektumnak kell lennie.",
-    "m_property": "A {0} objektumnak nincs {1} nevű tulajdonsága.",
-    "m_notInit": "A {0}.{1} eljárás {2} paramétere nincs inicializálva.",
-    "m_null": "A {0}.{1} eljárás {2} paraméterének nullnak kell lennie.",
-    "p_enumMember": "A {0}.{1} tulajdonság értékének egy {2} elemnek kell lennie.",
-    "p_optString": "A {0}.{1} tulajdonság értékének szövegnek vagy nullnak kell lennie."
-  },
+  "default": "Ez egy tesztüzenet.",
   "ConfigurationError": {
     "default": "Hiba van az üzleti objektumok konfigurációjában.",
     "string": "Az üzleti objektumok konfigurációjában {0} tulajdonság értékének nem-üres szövegnek kell lennie.",
@@ -135,47 +52,7 @@
     "remove": "{0} törlése nem sikerült.",
     "execute": "{0} végrehajtása nem sikerült."
   },
-  "Rules": {
-    "required": "{0} tulajdonság megadása kötelező.",
-    "dependency": "--- függőségi szabály ---",
-    "expression": "{0} tulajdonság érvénytelen.",
-    "lengthIs": "{0} tulajdonság hosszának {1} karakernek kell lennie.",
-    "lengthIs1": "{0} tulajdonság hosszának 1 karakternek kell lennie.",
-    "maxLength": "{0} tulajdonság hossza nem lehet nagyobb {1} karakternél.",
-    "maxLength1": "{0} tulajdonság hossza nem lehet nagyobb 1 karakternél.",
-    "maxValue": "{0} tulajdonság értéke nem lehet nagyobb mint {1}.",
-    "minLength": "{0} tulajdonság hosszának legalább {1} karakternek kell lennie.",
-    "minLength1": "{0} tulajdonság hosszának legalább 1 karakternek kell lennie.",
-    "minValue": "{0} tulajdonság legkisebb értéke {1} lehet.",
-    "isInRole": "A felhasználó nem tagja {0} feladatkörnek.",
-    "isInAllRoles": "A felhasználó nem tagja az összes következő feladatkörnek: {0}",
-    "isInAnyRole": "A felhasználó nem tagja legalább egy feladatkörnek a következőkből: {0}",
-    "isNotInRole": "A felhasználó tagja {0} feladatkörnek.",
-    "isNotInAnyRole": "A felhasználó tagja legalább egy feladatkörnek a következőkből: {0}",
-    "invalid": "A modell érvénytelen.",
-    "dataType": "{0} tulajdonság értékenek adattípusa nem {1}."
-  },
   "AuthorizationError": {
     "default": "A felhasználó nem jogosult a művelet végrehajtására."
-  },
-  "ModelError": {
-    "default": "Hiba van a modellben.",
-    "readCollection": "{0}.{1} gyűjtemény tulajdonságait nem lehet olvasni.",
-    "writeCollection": "{0}.{1} gyűjtemény tulajdonságait nem lehet írni.",
-    "readProperty": "{0}.{1} tulajdonságot nem lehet olvasni.",
-    "writeProperty": "{0}.{1} tulajdonságot nem lehet írni.",
-    "noProperty": "{0} modellnek nincs {1} nevű tulajdonsága.",
-    "getValue": "Csak-olvasható modell tulajdonságait nem lehet átmásolni az adatátviteli objektumra.",
-    "setValue": "Csak-olvasható modell tulajdonságait nem lehet átmásolni az ügyféloldali objektumról.",
-    "readOnly": "{0}.{1} tulajdonság csak olvasható.",
-    "transition": "Érvénytelen állapot-változás: {0} => {1}",
-    "propertyArg0": "{0} {1} tulajdonsága csak egy függvény lehet paraméterek nélkül.",
-    "propertyArg1": "{0} {1} tulajdonsága csak egy függvény lehet 1 paraméterrel.",
-    "propertyArgN": "{0} {1} tulajdonsága csak egy függvény lehet {2} paraméterrel.",
-    "invalidItem": "{0} modelltípusa {1}, de {2} elemeinek típusa csak {3} lehet.",
-    "invalidChild": "{0} {1} tulajdonságának modelltípusa {2}, de csak {3} lehet.",
-    "frozen": "{0} definícióját nem lehet megváltoztatni a létrehozás után.",
-    "invalidTree": "Az itemType paraméter {0}, de a felettes típusa {1}."
-  },
-  "default": "Ez egy tesztüzenet."
+  }
 }
