Adding argument check tests.

--- a/source/locales/default.argument-error.json
+++ b/source/locales/default.argument-error.json
@@ -1,29 +1,29 @@
 {
   "ArgumentError": {
     "default": "The passed value is invalid.",
-    "defined": "The argument must be supplied.",
-    "required": "The argument is required.",
-    "string": "The argument must be a string value.",
-    "optString": "The argument must be a string value or null.",
-    "manString": "The argument must be a non-empty string.",
-    "optNumber": "The argument must be a number value or null.",
-    "manNumber": "The argument must be a number value.",
-    "optInteger": "The argument must be an integer value or null.",
-    "manInteger": "The argument must be an integer value.",
-    "optBoolean": "The argument must be a Boolean value or null.",
-    "manBoolean": "The argument must be a Boolean value.",
-    "optObject": "The argument must be an object or null.",
-    "manObject": "The argument must be an object.",
-    "optFunction": "The argument must be a function or null.",
-    "manFunction": "The argument must be a function.",
-    "optType": "The argument must be a {0} object or null.",
-    "manType": "The argument must be a {0} object.",
-    "modelType": "The argument must be {0} type.",
-    "enumMember": "The argument must be a {0} item.",
-    "optArray": "The argument must be an array of {0} objects, or a single {0} object or null.",
-    "manArray": "The argument must be an array of {0} objects or a single {0} object.",
-    "optArrayPrim": "The argument must be an array of {0} values, or a single {0} value or null.",
-    "manArrayPrim": "The argument must be an array of {0} values or a single {0} value.",
+    "defined": "The {0} argument must be supplied.",
+    "required": "The {0} argument is required.",
+    "string": "The {0} argument must be a string value.",
+    "optString": "The {0} argument must be a string value or null.",
+    "manString": "The {0} argument must be a non-empty string.",
+    "optNumber": "The {0} argument must be a number value or null.",
+    "manNumber": "The {0} argument must be a number value.",
+    "optInteger": "The {0} argument must be an integer value or null.",
+    "manInteger": "The {0} argument must be an integer value.",
+    "optBoolean": "The {0} argument must be a Boolean value or null.",
+    "manBoolean": "The {0} argument must be a Boolean value.",
+    "optObject": "The {0} argument must be an object or null.",
+    "manObject": "The {0} argument must be an object.",
+    "optFunction": "The {0} argument must be a function or null.",
+    "manFunction": "The {0} argument must be a function.",
+    "optType": "The {0} argument must be a {1} object or null.",
+    "manType": "The {0} argument must be a {1} object.",
+    "modelType": "The {0} argument must be {1} type.",
+    "enumMember": "The {0} argument must be a {1} item.",
+    "optArray": "The {0} argument must be an array of {1} objects, or a single {1} object or null.",
+    "manArray": "The {0} argument must be an array of {1} objects or a single {1} object.",
+    "optArrayPrim": "The {0} argument must be an array of {1} values, or a single {1} value or null.",
+    "manArrayPrim": "The {0} argument must be an array of {1} values or a single {1} value.",
 
     "enumType": "{0} is not an enumeration type.",
     "rule": "A Rule constructor can accept three kind of argument: a string as the message, an integer as the priority and a Boolean as the stopsProcessing argument.",
