Finishing new argument check.

--- a/source/locales/hu-HU.argument-error.json
+++ b/source/locales/hu-HU.argument-error.json
@@ -28,59 +28,9 @@
     "optArrayPrim": "A paraméternek {0} értékek tömbjének, egy {0} értéknek vagy nullnak kell lennie.",
     "manArrayPrim": "A paraméternek {0} értékek tömbjének vagy egy {0} értéknek kell lennie.",
 
-    "c_defined": "A {0} konstruktor {1} paraméterét meg kell adnia.",
-    "c_required": "A {0} konstruktor {1} paramétere kötelező.",
-    "c_string": "A {0} konstruktor {1} paraméterének szövegnek kell lennie.",
-    "c_optString": "A {0} konstruktor {1} paraméterének szövegnek vagy nullnak kell lennie.",
-    "c_manString": "A {0} konstruktor {1} paraméterének nem-üres szövegnek kell lennie.",
-    "c_optNumber": "A {0} konstruktor {1} paraméterének számnak vagy nullnak kell lennie.",
-    "c_manNumber": "A {0} konstruktor {1} paraméterének számnak kell lennie.",
-    "c_optInteger": "A {0} konstruktor {1} paraméterének egész számnak vagy nullnak kell lennie.",
-    "c_manInteger": "A {0} konstruktor {1} paraméterének egész számnak kell lennie.",
-    "c_optBoolean": "A {0} konstruktor {1} paraméterének logikai értéknek vagy nullnak kell lennie.",
-    "c_manBoolean": "A {0} konstruktor {1} paraméterének logikai értéknek kell lennie.",
-    "c_optObject": "A {0} konstruktor {1} paraméterének objektumnak vagy nullnak kell lennie.",
-    "c_manObject": "A {0} konstruktor {1} paraméterének objektumnak kell lennie.",
-    "c_optFunction": "A {0} konstruktor {1} paraméterének függvénynek vagy nullnak kell lennie.",
-    "c_manFunction": "A {0} konstruktor {1} paraméterének függvénynek kell lennie.",
-    "c_optType": "A {0} konstruktor {1} paraméterének {2} objektumnak vagy nullnak kell lennie.",
-    "c_manType": "A {0} konstruktor {1} paraméterének {2} objektumnak kell lennie.",
-    "c_modelType": "A {0} konstruktor {1} paraméterének {2} típusnak kell lennie.",
-    "c_enumMember": "A {0} konstruktor {1} paraméterének egy {2} elemnek kell lennie.",
-    "c_optArray": "A {0} konstruktor {1} paraméterének {2} objektumtömbnek, egy {2} objektumnak vagy nullnak kell lennie.",
-    "c_manArray": "A {0} konstruktor {1} paraméterének {2} objektumtömbnek vagy egy {2} objektumnak kell lennie.",
-    "c_optArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének, egy {2} értéknek vagy nullnak kell lennie.",
-    "c_manArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének vay egy {2} értéknek kell lennie.",
-
-    "m_defined": "A {0}.{1} eljárás {2} paraméterét meg kell adnia.",
-    "m_required": "A {0}.{1} eljárás {2} paramétere kötelező.",
-    "m_string": "A {0}.{1} eljárás {2} paraméterének szövegnek kell lennie.",
-    "m_optString": "A {0}.{1} eljárás {2} paraméterének szövegnek vagy nullnak kell lennie.",
-    "m_manString": "A {0}.{1} eljárás {2} paraméterének nem-üres szövegnek kell lennie.",
-    "m_optNumber": "A {0}.{1} eljárás {2} paraméterének számnak vagy nullnak kell lennie.",
-    "m_manNumber": "A {0}.{1} eljárás {2} paraméterének számnak kell lennie.",
-    "m_optInteger": "A {0}.{1} eljárás {2} paraméterének egész számnak vagy nullnak kell lennie.",
-    "m_manInteger": "A {0}.{1} eljárás {2} paraméterének egész számnak kell lennie.",
-    "m_optBoolean": "A {0}.{1} eljárás {2} paraméterének logikai értéknek vagy nullnak kell lennie.",
-    "m_manBoolean": "A {0}.{1} eljárás {2} paraméterének logikai értéknek kell lennie.",
-    "m_optObject": "A {0}.{1} eljárás {2} paraméterének objektumnak vagy nullnak kell lennie.",
-    "m_manObject": "A {0}.{1} eljárás {2} paraméterének objektumnak kell lennie.",
-    "m_optFunction": "A {0}.{1} eljárás {2} paraméterének függvények vagy nullnak kell lennie.",
-    "m_manFunction": "A {0}.{1} eljárás {2} paraméterének függvénynek kell lennie.",
-    "m_optType": "A {0}.{1} eljárás {2} paraméterének {3} objektumnak vagy nullnak kell lennie.",
-    "m_manType": "A {0}.{1} eljárás {2} paraméterének {3} objektumnak kell lennie.",
-    "m_modelType": "A {0}.{1} eljárás {2} paraméterének {3} típusnak kell lennie.",
-    "m_enumMember": "A {0}.{1} eljárás {2} paraméterének egy {3} elemnek kell lennie.",
-    "m_optArray": "A {0}.{1} eljárás {2} paraméterének {3} objektumtömbnek, egy {3} objektumnak vagy nullnak kell lennie.",
-    "m_manArray": "A {0}.{1} eljárás {2} paraméterének {3} objektumtömbnek vagy egy {3} objektumnak kell lennie.",
-    "m_optArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének, egy {3} értéknek vagy nullnak kell lennie.",
-    "m_manArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének vagy egy {3} értéknek kell lennie.",
-
     "c_pm": "Az első kivételével a PropertyManager konstruktor összes paraméterének PropertyInfo objektumnak kell lennie.",
     "m_property": "A {0} objektumnak nincs {1} nevű tulajdonsága.",
     "m_notInit": "A {0}.{1} eljárás {2} paramétere nincs inicializálva.",
-    "m_null": "A {0}.{1} eljárás {2} paraméterének nullnak kell lennie.",
-    "p_enumMember": "A {0}.{1} tulajdonság értékének egy {2} elemnek kell lennie.",
-    "p_optString": "A {0}.{1} tulajdonság értékének szövegnek vagy nullnak kell lennie."
+    "m_null": "A {0}.{1} eljárás {2} paraméterének nullnak kell lennie."
   }
 }
