Finishing new argument check.

--- a/source/locales/default.argument-error.json
+++ b/source/locales/default.argument-error.json
@@ -19,15 +19,14 @@
     "optType": "The {0} argument must be a {1} object or null.",
     "manType": "The {0} argument must be a {1} object.",
     "modelType": "The {0} argument must be {1} type.",
+    "enumType": "The {0} argument must be an enumeration type.",
     "enumMember": "The {0} argument must be a {1} item.",
     "optArray": "The {0} argument must be an array of {1} objects, or a single {1} object or null.",
     "manArray": "The {0} argument must be an array of {1} objects or a single {1} object.",
     "optArrayPrim": "The {0} argument must be an array of {1} values, or a single {1} value or null.",
     "manArrayPrim": "The {0} argument must be an array of {1} values or a single {1} value.",
 
-    "enumType": "{0} is not an enumeration type.",
     "rule": "A Rule constructor can accept three kind of argument: a string as the message, an integer as the priority and a Boolean as the stopsProcessing argument.",
-
     "c_pm": "All arguments of PropertyManager constructor but the first must be a PropertyInfo object.",
     "m_property": "The {0} object has no property named {1}.",
     "m_notInit": "The {2} argument of {0}.{1} method is not initialized.",
