--- a/source/locales/default.property-error.json
+++ b/source/locales/default.property-error.json
@@ -19,6 +19,7 @@
     "optType": "The value of {0}.{1} property must be a {2} object or null.",
     "manType": "The value of {0}.{1} property must be a {2} object.",
     "modelType": "The value of {0}.{1} property must be {2} type.",
+    "enumType": "The value of {0}.{1} property must be an enumeration type.",
     "enumMember": "The value of {0}.{1} property must be a {2} item.",
     "optArray": "The value of {0}.{1} property must be an array of {2} objects, or a single {2} object or null.",
     "manArray": "The value of {0}.{1} property must be an array of {2} objects or a single {2} object.",
