--- a/source/locales/hu-HU.argument-error.json
+++ b/source/locales/hu-HU.argument-error.json
@@ -1,33 +1,32 @@
 {
   "ArgumentError": {
     "default": "A megadott érték érvénytelen.",
-    "enumType": "{0} nem felsorolás típus.",
+    "defined": "A {0} paramétert meg kell adnia.",
+    "required": "A {0} paraméter kötelező.",
+    "string": "A {0} paraméternek szövegnek kell lennie.",
+    "optString": "A {0} paraméternek szövegnek vagy nullnak kell lennie.",
+    "manString": "A {0} paraméternek nem-üres szövegnek kell lennie.",
+    "optNumber": "A {0} paraméternek számnak vagy nullnak kell lennie.",
+    "manNumber": "A {0} paraméternek számnak kell lennie.",
+    "optInteger": "A {0} paraméternek egész számnak vagy nullnak kell lennie.",
+    "manInteger": "A {0} paraméternek egész számnak kell lennie.",
+    "optBoolean": "A {0} paraméternek logikai értéknek vagy nullnak kell lennie.",
+    "manBoolean": "A {0} paraméternek logikai értéknek kell lennie.",
+    "optObject": "A {0} paraméternek objektumnak vagy nullnak kell lennie.",
+    "manObject": "A {0} paraméternek objektumnak kell lennie.",
+    "optFunction": "A {0} paraméternek függvénynek vagy nullnak kell lennie.",
+    "manFunction": "A {0} paraméternek függvénynek kell lennie.",
+    "optType": "A {0} paraméternek {1} objektumnak vagy nullnak kell lennie.",
+    "manType": "A {0} paraméternek {1} objektumnak kell lennie.",
+    "modelType": "A {0} paraméternek {1} típusnak kell lennie.",
+    "enumType": "A {0} paraméternek felsorolás típusnak kell lennie.",
+    "enumMember": "A {0} paraméternek egy {1} elemnek kell lennie.",
+    "optArray": "A {0} paraméternek {1} objektumtömbnek, egy {1} objektumnak vagy nullnak kell lennie.",
+    "manArray": "A {0} paraméternek {1} objektumtömbnek vagy egy {1} objektumnak kell lennie.",
+    "optArrayPrim": "A {0} paraméternek {1} értékek tömbjének, egy {1} értéknek vagy nullnak kell lennie.",
+    "manArrayPrim": "A {0} paraméternek {1} értékek tömbjének vagy egy {1} értéknek kell lennie.",
+
     "rule": "Egy Rule konstruktor háromféle paramétert fogad el: egy szöveget az üzenetnej, egy egész számot prioritásnak és egy logikai értéket mint a stopsProcessing paramétert.",
-
-    "defined": "A paramétert meg kell adnia.",
-    "required": "A paraméter kötelező.",
-    "string": "A paraméternek szövegnek kell lennie.",
-    "optString": "A paraméternek szövegnek vagy nullnak kell lennie.",
-    "manString": "A paraméternek nem-üres szövegnek kell lennie.",
-    "optNumber": "A paraméternek számnak vagy nullnak kell lennie.",
-    "manNumber": "A paraméternek számnak kell lennie.",
-    "optInteger": "A paraméternek egész számnak vagy nullnak kell lennie.",
-    "manInteger": "A paraméternek egész számnak kell lennie.",
-    "optBoolean": "A paraméternek logikai értéknek vagy nullnak kell lennie.",
-    "manBoolean": "A paraméternek logikai értéknek kell lennie.",
-    "optObject": "A paraméternek objektumnak vagy nullnak kell lennie.",
-    "manObject": "A paraméternek objektumnak kell lennie.",
-    "optFunction": "A paraméternek függvénynek vagy nullnak kell lennie.",
-    "manFunction": "A paraméternek függvénynek kell lennie.",
-    "optType": "A paraméternek {0} objektumnak vagy nullnak kell lennie.",
-    "manType": "A paraméternek {0} objektumnak kell lennie.",
-    "modelType": "A paraméternek {0} típusnak kell lennie.",
-    "enumMember": "A paraméternek egy {0} elemnek kell lennie.",
-    "optArray": "A paraméternek {0} objektumtömbnek, egy {0} objektumnak vagy nullnak kell lennie.",
-    "manArray": "A paraméternek {0} objektumtömbnek vagy egy {0} objektumnak kell lennie.",
-    "optArrayPrim": "A paraméternek {0} értékek tömbjének, egy {0} értéknek vagy nullnak kell lennie.",
-    "manArrayPrim": "A paraméternek {0} értékek tömbjének vagy egy {0} értéknek kell lennie.",
-
     "c_pm": "Az első kivételével a PropertyManager konstruktor összes paraméterének PropertyInfo objektumnak kell lennie.",
     "m_property": "A {0} objektumnak nincs {1} nevű tulajdonsága.",
     "m_notInit": "A {0}.{1} eljárás {2} paramétere nincs inicializálva.",
