--- a/source/locales/hu-HU.constructor-error.json
+++ b/source/locales/hu-HU.constructor-error.json
@@ -24,6 +24,9 @@
     "optArray": "A {0} konstruktor {1} paraméterének {2} objektumtömbnek, egy {2} objektumnak vagy nullnak kell lennie.",
     "manArray": "A {0} konstruktor {1} paraméterének {2} objektumtömbnek vagy egy {2} objektumnak kell lennie.",
     "optArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének, egy {2} értéknek vagy nullnak kell lennie.",
-    "manArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének vay egy {2} értéknek kell lennie."
+    "manArrayPrim": "A {0} konstruktor {1} paraméterének {2} értékek tömbjének vay egy {2} értéknek kell lennie.",
+
+    "properties": "Az első kivételével a {0} konstruktor összes paraméterének PropertyInfo objektumnak kell lennie.",
+    "rule": "A {0} konstruktor utolsó 3 paramétere lehet: egy szöveg üzenetként, egy egész szám prioritásként és egy logikai érték mint a stopsProcessing paraméter."
   }
 }
