--- a/source/locales/hu-HU.method-error.json
+++ b/source/locales/hu-HU.method-error.json
@@ -24,6 +24,9 @@
     "optArray": "A {0}.{1} eljárás {2} paraméterének {3} objektumtömbnek, egy {3} objektumnak vagy nullnak kell lennie.",
     "manArray": "A {0}.{1} eljárás {2} paraméterének {3} objektumtömbnek vagy egy {3} objektumnak kell lennie.",
     "optArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének, egy {3} értéknek vagy nullnak kell lennie.",
-    "manArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének vagy egy {3} értéknek kell lennie."
+    "manArrayPrim": "A {0}.{1} eljárás {2} paraméterének {3} értékek tömbjének vagy egy {3} értéknek kell lennie.",
+
+    "noProperty": "A {0}.{1} eljárás {2} paramétere rossz: A {0} objektumnak nincs {1} nevű tulajdonsága.",
+    "m_notInit": "A {0}.{1} eljárás {2} paramétere rossz: A szabály nincs inicializálva."
   }
 }
