--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -54,5 +54,10 @@
   },
   "AuthorizationError": {
     "default": "The user has no permission to execute the action."
+  },
+  "ComposerError": {
+    "default": "The model composer found an error in the class definition.",
+    "invalid": "Definition of {0} class: ModelComposer.{1}() is not applicable for {2} models.",
+    "property": "Definition of {0} class: The current property is undefinable for ModelComposer.{1}()."
   }
 }
