--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -35,8 +35,8 @@
   },
   "DaoError": {
     "default": "A data access object error occurred.",
-    "c_manString": "The {0} argument of a data access object's constructor must be a non-empty string.",
-    "m_manString": "The {1} argument of data access object's {0} method must be a non-empty string.",
+    "c_manString": "The {1} argument of {0} constructor must be a non-empty string.",
+    "m_manString": "The {2} argument of {0}.{1} method must be a non-empty string.",
     "f_manString": "The {0} argument of daoBuilder function must be a non-empty string.",
     "filePath": "The {0} argument of daoBuilder function is not a valid file path: {1}",
     "noDaoFile": "The required data access file does not exist: {0}",
